--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <script>
-    const videoFolder = '../videosFolder'
+    const videoFolder = './videosFolder'
     const videosList = [
       'video1.mp4',
       'video2.mp4',
